--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nature-snaps</title>
+    <title>Nature Snaps</title>
 
-    <!-- 
-    - Favicon
-    --->
-    <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml" />
-
+    <!-----  
+        - Favicons
+    ----->
+    <link rel="shortcut icon" href="" type="image/x-icon" />
+    
   </head>
   <body>
     <div id="root"></div>
